added vercel domain to the cors

--- a/backend/env.example
+++ b/backend/env.example
@@ -1,5 +1,7 @@
 PORT=5000
 CLIENT_URL=http://localhost:3000
+# Optional: comma-separated list of additional allowed origins (e.g., Vercel domain)
+CLIENT_URLS=https://your-frontend.vercel.app
 
 # MongoDB connection string
 MONGO_URI=mongodb://localhost:27017/viraya
