--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "seed": "node src/seed/seed.js"
+    "seed": "node src/seed/seed.js",
+    "update-stock": "node src/seed/updateStock.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
